Put safeguard in place to prevent searchItem text overflow from changing layout

--- a/styles/sass/search/SearchItem.scss
+++ b/styles/sass/search/SearchItem.scss
@@ -1,6 +1,7 @@
 .SearchItem {
 	padding: 15px 5px;
 	border: 5px solid transparent;
+	overflow: hidden;
 
 	a {
 		color: black;
